@@ -1,6 +1,5 @@
 AUX cuneiform-0.3-no-imagemagic.patch 456 RMD160 9709458ddb02bb05804ebb63461c668c8548e89b SHA1 e64d22fe68a5c2f144b0827aa29e9799751d3516 SHA256 acc22a8daeec0761f5224f45c12fd8da52ca69a1b4a163583b6b77876aba8677
-DIST cuneiform-0.3-pragma-fix.patch.bz2 5785 RMD160 495383424ec376010d5d73c6247eba5f2738f733 SHA1 16432b36f9a52c00a7aae6720d86b0570a99e67a SHA256 d3faa58779f8ac7feb415b0615da3549e1fe1373aa9032ddecb61021ffa200f7
-DIST cuneiform-0.3.tar.bz2 30108605 RMD160 19b4e4b61d24adce2aecf5bae02e455737e30bc1 SHA1 8f34c45502be5c6b8e3a12ea4931f89dd2483749 SHA256 79683dfe94431ddfd06198fdc39bbadd493ab6ecd08bc7befb2da798cb4b5591
-EBUILD cuneiform-0.3.ebuild 980 RMD160 f6909db967a6f8d16cf6e8234ede2c13a40c74c7 SHA1 edc7b2e67df9a9b63af82e6e64e7f77fea765cf3 SHA256 e2e3790a4f95843f6d518218921633a43e5292f88d1a5788c4b2c15169e2f0d2
-MISC ChangeLog 531 RMD160 cee7e4915bd6b839e220f33e28ff671bc8f1aeba SHA1 c9f04d53cc5f4963b2bd25d039c0598459f6e4fd SHA256 a5124af0876323c2c24c74230af99bca8ea383b6d640a9b5a251d9e9f3e046a5
+DIST cuneiform-0.3.1.tar.bz2 30110799 RMD160 6518c70224c93475da47a2d2d1cebd591bf57f78 SHA1 8133c788f9664315128f68ce92d1cd74dc63ce30 SHA256 9a48da92489b44d86db06e3aa273afb2375d19161e94e293d74341dbdab92971
+EBUILD cuneiform-0.3.1.ebuild 886 RMD160 abd2097ade52eb9a966e2fed47d8ea670c87af2a SHA1 55f552933d2d44acb02f674e73acc404c6a58747 SHA256 18ab10b2f963763c67e5577aa45d426ec56ef3460c64e29bc324e8dd039efd43
+MISC ChangeLog 670 RMD160 ee38af9a1dfb609e4bbcacee11a0db71e237ba09 SHA1 9661d675a7491cc6ddd4a20220d5fc938e74b449 SHA256 0cc6922c864ada9e0ed1d6fcb959504d23dd14a5455593788d21175bb4da6994
 MISC metadata.xml 455 RMD160 068a24156cd1f834d97f56aaa46a68b3a5508809 SHA1 0d652027e97f6b36ba5466df4c755d97d20d9d98 SHA256 e7f576e3f6ddac30b3598005f4a132ecc428ed762ec757864ca731966e5a83c1
