@@ -2,16 +2,17 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit cmake-utils eutils
+inherit cmake-utils versionator
+
+PV_MAJ=$(get_version_component_range 1-2)
 
 DESCRIPTION="An enterprise quality OCR engine developed in USSR/Russia in the 90's."
 HOMEPAGE="https://launchpad.net/cuneiform-linux"
-SRC_URI="http://launchpad.net/${PN}-linux/${PV}/${PV}/+download/${P}.tar.bz2
-		http://omploader.org/vb3Rs/${P}-pragma-fix.patch.bz2"
+SRC_URI="http://launchpad.net/${PN}-linux/${PV_MAJ}/${PV_MAJ}/+download/${P}.tar.bz2"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~amd64 ~x86"
 
 IUSE="imagemagick debug"
 
@@ -23,10 +24,6 @@ DOCS="readme.txt"
 
 src_unpack(){
 	unpack ${A}
-	cd "${S}"
-
-	epatch "${WORKDIR}"/${P}-pragma-fix.patch
-	epatch "${FILESDIR}"/${P}-no-imagemagic.patch
 	# Fix automagic dependencies / linking
 	if ! use imagemagick; then
 		sed -e '/pkg_check_modules(MAGICK ImageMagick++)/s/^/#DONOTFIND /' \
