@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Aug 2008; Aleksandr Yakimov (yaleks) <skyaleks@ya.ru>
+  -cuneiform-0.3.ebuild, +cuneiform-0.3.1.ebuild:
+  Version bump for CuneiForm
+
   20 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> metadata.xml:
   Correct <herd> in metadata.xml
 
